--- a/package.json
+++ b/package.json
@@ -3,6 +3,11 @@
   "version": "6.4.2",
   "homepage": "https://mdbootstrap.com/docs/standard/",
   "license": "MIT",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js",
+    "seed": "node seeds/index.js"
+  },
   "dependencies": {
     "bcrypt": "^5.1.1",
     "dotenv": "^16.3.1",
@@ -13,4 +18,5 @@
     "node": "^21.1.0",
     "sequelize": "^6.35.0"
   }
+ 
 }
