--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "express-session": "^1.17.3",
     "mysql2": "^3.6.3",
     "node": "^21.1.0",
-    "sequelize": "^6.35.0"
+    "sequelize": "^6.35.0",
+    "socket.io": "^4.7.2"
   }
- 
 }
